<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textoPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/pregunta"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="180dp" />

    <Button
        android:id="@+id/botonAceptar"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:backgroundTint="#957C7C"
        android:onClick="botonAceptar"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoRespuesta" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="237dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toTopOf="@+id/textoRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPregunta">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ios" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/windows" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simbian" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otro" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>